# wasm-examples

./: .gitignore  README.md
assemblyscript/: Makefile
assemblyscript/assembly/: index.ts  plugins.ts
go/complex/: Makefile  go.mod  main.go
go/complex/abi/: abi.go
go/simple/: README.md  go.mod  go_simple.wasm  go_simple.wat  sum.go
go/string/: Makefile  go.mod  go_simple.wasm  go_simple.wat  main.go
go/string/abi/: abi.go
ruby/: Makefile  README.md
ruby/src/: hello.rb
rust/modules/: Cargo.toml  Makefile  README.md  rust.wasm  rust.wat
rust/modules/src/: abi.rs  lib.rs
rust/sockets/: Cargo.toml  Makefile  sockets.wasm
rust/sockets/src/: lib.rs
