[package]
name = "sockets"
version = "0.1.0"
authors = ["Nic Jackson <jackson.nic@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { git = "https://github.com/tokio-rs/tokio", features = ["rt", "macros", "net", "io-util"] }
hyper = { version = "0.14", features = ["http1", "http2", "server"]}

[patch.crates-io]
mio = { git = "https://github.com/tokio-rs/mio" }
tokio = { git = "https://github.com/tokio-rs/tokio" }

[lib]
crate-type = ["cdylib"]